# parametric_speaker

./: README.md
code/: Cargo.toml
code/.cargo/: config.toml
code/src/: main.rs
pcb/: fp-lib-table  parametric_speaker.kicad_pcb  parametric_speaker.kicad_pro  parametric_speaker.kicad_sch  place_footprints.ini  sym-lib-table  transducers.kicad_sch
pcb/Models/: PG-DSO-8-70.step  transducer.step
pcb/Symbols/: 2ED2103S06FXUMA1.kicad_sym  PCM1808_Module.kicad_sym  WeAct_Black_Pill_V2.0.kicad_sym
pcb/footprints.pretty/: DC-DC Buck.kicad_mod  PCM1808_Module.kicad_mod  PG-DSO-8-70-L.kicad_mod  PG-DSO-8-70-M.kicad_mod  PG-DSO-8-70.kicad_mod  Power_Pads.kicad_mod  STM32F411_Black_Pill.kicad_mod  TCT40-16T.kicad_mod
pcb/speaker_driver/: fp-lib-table  speaker_driver.kicad_pcb  speaker_driver.kicad_pro  speaker_driver.kicad_sch  ~speaker_driver.kicad_pcb.lck
